[package]
name = "pulsight"
version = "0.1.0"
edition = "2021"
description = "Official Rust client for the Pulsight API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pulsight-xyz/pulsight-rust"

# progenitor generates the client from ../openapi/public.json at compile
# time via the generate_api! macro in src/lib.rs. `cargo build` reveals any
# additional transitive deps the generated code needs (e.g. chrono/uuid for
# date/uuid formats) — add them here when the compiler asks.
[dependencies]
progenitor = "0.8"
progenitor-client = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
futures = "0.3"
bytes = "1"
